# 25-26

./: .gitignore  README.md  dummyagent.py  pyproject.toml
agentspeak/domestic/: domestic.py  owner.asl  robot.asl  (+1 more)
sumo/: AGENTS.md  README.md  TUTORIAL.md  dashboard.py  pyproject.toml  sim_engine.py
sumo/examples/: basic_agent.py  dummy_agent.py  traffic.asl
sumo/scenarios/autonomous/: auto.edg.xml  auto.nod.xml  autonomous.net.xml  autonomous.rou.xml  autonomous.sumocfg  autonomous.trips.xml
sumo/scenarios/basic_cross/: basic_cross.edg.xml  basic_cross.net.xml  basic_cross.nod.xml  basic_cross.rou.xml  basic_cross.sumocfg
sumo/scenarios/cross/: cross.edg.xml  cross.net.xml  cross.nod.xml  cross.rou.xml  cross.sumocfg
sumo/scenarios/diagonal/: diagonal.edg.xml  diagonal.net.xml  diagonal.nod.xml  diagonal.rou.xml  diagonal.sumocfg
sumo/scenarios/graph/: graph.edg.xml  graph.net.xml  graph.nod.xml  graph.rou.xml  graph.sumocfg
sumo/scenarios/grid/: grid.net.xml  grid.rou.xml  grid.sumocfg
sumo/scenarios/interurban/: interurban.edg.xml  interurban.net.xml  interurban.nod.xml  interurban.rou.xml  interurban.sumocfg  interurban.trips.xml
sumo/scenarios/random/: random.edg.xml  random.net.xml  random.nod.xml  random.rou.xml  random.sumocfg  random.trips.xml
sumo/scenarios/street/: street.net.xml  street.rou.xml  street.sumocfg
sumo/tests/: test_engine.py  test_minimal.py  test_standalone.py  test_sumonetvis.py
sumo/tools/: build_autonomous_city.py  build_graph_network.py  build_interurban.py  build_random_city.py  record_video.py  show_map.py
(+60 files in other folders)
