[project]
name = "ain25-26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentspeak>=0.2.2",
    "pyjabber==0.3.0",
    "pytest>=9.0.3",
    "spade>=4.1.2",
    "spade-artifact>=0.3.1",
    "spade-bdi>=0.3.2",
    "spade-pubsub>=0.3.0",
]
